# picceler

./: .clang-format  .clang-tidy  BUILD.md  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  LANGUAGE.md  LICENSE.md  README.md  TODO.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance-refactoring.md
.github/workflows/: docs.yaml  lit_mlir_tests.yaml  unit_tests.yaml
examples/: blend.pic  blur.pic  box_blur.pic  brightness.pic  comment.pic  convolution.pic  crop.pic  diff.pic  dilate.pic  edge_detect.pic  emboss.pic  erode.pic  function.pic  gaussian_blur.pic  invert.pic  print.pic  read_input.pic  rotate.pic  sharpen.pic
frontend/: CMakeLists.txt
frontend/include/: app.h  lexer.h  parser.h
frontend/src/: app.cpp  lexer.cpp  main.cpp  parser.cpp
include/: app.h  ast.h  channels.h  compiler.h  dialect.h  error.h  image_access_helper.h  lexer.h  mlir_gen.h  ops.h  parser.h  pass_manager.h  passes.h  types.h  utils.h
include/frontend/: example.hpp
issues/: test.pic
lib/: CMakeLists.txt
lib/include/: image.h  runtime.h
lib/src/: image.cpp  print.cpp  runtime.cpp
src/: CMakeLists.txt  app.cpp  ast.cpp  compiler.cpp  dialect.cpp  image_access_helper.cpp  lexer.cpp  lower_picceler_filters_to_conv_pass.cpp  lower_picceler_ops_to_func_calls_pass.cpp  main.cpp  mlir_gen.cpp  ops.cpp  parser.cpp  pass_manager.cpp  passes.cpp  picceler_const_ops_to_llvm_ir_pass.cpp  picceler_filters_to_conv_pass.cpp  picceler_kernel_to_memref.cpp  picceler_kernel_to_memref_pass.cpp  picceler_ops_to_func_calls_pass.cpp  picceler_to_affine_pass.cpp  picceler_to_llvm_ir_pass.cpp  picceler_types_to_llvm_ir_pass.cpp  types.cpp  utils.cpp
src/frontend/: main.cpp
src/ops/: blend.cpp  common.cpp  convolution.cpp  diff.cpp  dilate.cpp  erode.cpp  print.cpp
tablegen/: CMakeLists.txt  dialect.td  interfaces.td  ops.td  passes.td  types.td
tests/: CMakeLists.txt
tests/data/: bad_kernel_bad_number.pic  bad_kernel_missing_comma.pic  numbers.pic  strings.pic
tests/lit/: CMakeLists.txt  lit.cfg.py
tests/lit/mlir/: picceler_filters_to_conv_pass.mlir  picceler_kernel_to_memref_pass.mlir  picceler_ops_to_func_calls_pass.mlir  picceler_to_affine_invalid_angle.mlir  picceler_to_affine_pass.mlir
tests/src/: lexer_tests.cpp  main.cpp  parser_tests.cpp
tests/unit/: CMakeLists.txt
tests/unit/data/: bad_kernel_missing_bracket.pic  identifiers.pic  kernel.pic  load_image.pic  rotate_negative.pic  weird.pic
tests/unit/src/: lexer_tests.cpp  main.cpp  parser_tests.cpp
tools/: CMakeLists.txt
tools/picceler-mlir-lsp-server/: CMakeLists.txt  README.md  main.cpp
tools/picceler-opt/: CMakeLists.txt  README.md  main.cpp
